--- a/tdh.html
+++ b/tdh.html
@@ -32,7 +32,7 @@
 						הבדל זה כל כך סמלי עד שנהוג לכנות את הציבור הציוני דתי "כיפות סרוגות" . <br>
 						3. אצל הציבור החרדי נפוץ יותר מאשר בציבור הציוני דתי שאנשים בגילאי שוק העבודה רוב שעות היום לומדים תורה.<br>
 						4. הציבור החרדי יותר מקפיד על הפרדה בינו לבין שאר הציבור הישראלי בארץ על מנת לשמור על אווירה וסביבה חינוכית מותאמת לעבודת ה'.<br>
-						5. אצל הציבור החרדי יותר רווח וחזק החשש מן השינוי והפיתוח הטנולוגי פן הוא יפגע בדרך כלשהיא בעבודת ה' ושמירת המסורת. <br>
+						5. אצל הציבור החרדי יותר רווח וחזק החשש מן השינוי והפיתוח הטכנולוגי פן הוא יפגע בדרך כלשהיא בעבודת ה' ושמירת המסורת. <br>
 					</p>
 				</div>
 				<div class="עבר" style="color:red; font-size: 40px";>
